[gd_scene load_steps=102 format=2]

[ext_resource path="res://assets/Knight_player/Idle_KG_2.png" type="Texture" id=1]
[ext_resource path="res://assets/Knight_player/Dying_KG_2.png" type="Texture" id=2]
[ext_resource path="res://assets/Knight_player/Walking_KG_2.png" type="Texture" id=3]
[ext_resource path="res://scripts/character.gd" type="Script" id=4]
[ext_resource path="res://assets/Arcane archer/spritesheet.png" type="Texture" id=5]
[ext_resource path="res://assets/Shotgunner/idle.png" type="Texture" id=6]
[ext_resource path="res://assets/Shotgunner/run.png" type="Texture" id=7]
[ext_resource path="res://assets/Shotgunner/shotgun blast.png" type="Texture" id=8]
[ext_resource path="res://assets/Shotgunner/death.png" type="Texture" id=9]
[ext_resource path="res://assets/Knight_player/Attack_KG_2.png" type="Texture" id=10]
[ext_resource path="res://assets/atkIndicator.png" type="Texture" id=11]
[ext_resource path="res://assets/light.webp" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 40 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 320, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 99, 64 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 100, 0, 99, 64 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 200, 0, 99, 64 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 99, 64 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 400, 0, 99, 64 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 500, 0, 99, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 500, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 100, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 200, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 300, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 100, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 200, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 300, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 0, 100, 64 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 46, 35 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 35, 46, 35 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 70, 46, 35 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 105, 46, 35 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 140, 46, 35 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 175, 46, 35 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 46, 38 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 38, 46, 38 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 76, 46, 38 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 114, 46, 38 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 152, 46, 38 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 190, 46, 38 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 228, 46, 38 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 266, 46, 38 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 304, 46, 38 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 342, 46, 38 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 46, 35 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 35, 46, 35 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 70, 46, 35 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 105, 46, 35 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 140, 46, 35 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 175, 46, 35 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 46, 35 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 35, 46, 35 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 70, 46, 35 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 105, 46, 35 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 140, 46, 35 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 175, 46, 35 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 210, 46, 35 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 245, 46, 35 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "archer_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "archer_die",
"speed": 5.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "archer_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "archer_move",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ) ],
"loop": true,
"name": "knight_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "knight_die",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "knight_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ) ],
"loop": true,
"name": "knight_move",
"speed": 5.0
}, {
"frames": [ SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "shotgunner_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ) ],
"loop": true,
"name": "shotgunner_die",
"speed": 5.0
}, {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ) ],
"loop": true,
"name": "shotgunner_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ) ],
"loop": true,
"name": "shotgunner_move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=87]
extents = Vector2( 68.25, 64 )

[sub_resource type="CircleShape2D" id=88]
radius = 160.2

[sub_resource type="RectangleShape2D" id=102]
extents = Vector2( 22.5, 46.5 )

[node name="Character" type="KinematicBody2D"]
light_mask = 0
position = Vector2( 960, 544 )
collision_mask = 6
script = ExtResource( 4 )

[node name="collisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 1 )

[node name="Pivot" type="Position2D" parent="."]

[node name="spriteFrames" type="AnimatedSprite" parent="Pivot"]
light_mask = 0
scale = Vector2( 2, 2 )
frames = SubResource( 2 )

[node name="KnightHurtboxPivot" type="Position2D" parent="."]

[node name="knight" type="Area2D" parent="KnightHurtboxPivot"]
position = Vector2( 37, -39 )
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="KnightHurtboxPivot/knight"]
position = Vector2( 30.75, 39 )
shape = SubResource( 87 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_speed = 100.0

[node name="AtkIndicator" type="Position2D" parent="."]

[node name="IndicatorSprite" type="Sprite" parent="AtkIndicator"]
light_mask = 0
position = Vector2( 89, 0 )
texture = ExtResource( 11 )

[node name="characterLight" type="Light2D" parent="."]
texture = ExtResource( 12 )
texture_scale = 1.6
energy = 1.45

[node name="lightArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="lightArea"]
shape = SubResource( 88 )

[node name="takeDamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="takeDamageArea"]
position = Vector2( 0, 8 )
shape = SubResource( 102 )

[connection signal="body_entered" from="KnightHurtboxPivot/knight" to="." method="_on_knight_body_entered"]
[connection signal="body_entered" from="lightArea" to="." method="_on_lightArea_body_entered"]
[connection signal="body_exited" from="lightArea" to="." method="_on_lightArea_body_exited"]
[connection signal="body_entered" from="takeDamageArea" to="." method="_on_takeDamageArea_body_entered"]
